[package]
name = "json_nom-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.pineapple_json]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = false

[[bin]]
name = "json"
path = "fuzz_targets/json.rs"
test = false
doc = false
